--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     >
       <div class="container mx-auto px-4 text-center">
         <img
-          src="./assets/me4.jpeg"
+          src="./assets/me.jpeg"
           alt="Foto de Perfil"
           class="w-48 h-48 rounded-full mx-auto mb-6 object-cover border-4 border-white shadow-lg"
         />
